[gd_scene load_steps=14 format=3 uid="uid://nivylymkj8by"]

[ext_resource type="Script" path="res://Scripts/level_2_escada.gd" id="1_meh1w"]
[ext_resource type="Texture2D" uid="uid://xn0jdmfkfdd8" path="res://Assets/level2/elevador.png" id="2_pfo2s"]
[ext_resource type="Texture2D" uid="uid://dst4fsf1d464n" path="res://Assets/level2/planta.png" id="3_g0jwb"]
[ext_resource type="Texture2D" uid="uid://clvrgqassoy5v" path="res://Assets/level2/prancheta de aviso.png" id="4_sk5kg"]
[ext_resource type="Texture2D" uid="uid://csk82xffou2hn" path="res://Assets/level2/seta.png" id="5_jv0xp"]
[ext_resource type="Texture2D" uid="uid://dtm5q5sod3i3n" path="res://Assets/level2/porta escada.png" id="6_7al28"]
[ext_resource type="Texture2D" uid="uid://j51gei8c62d6" path="res://Assets/level2/folha com 3.png" id="7_m1d11"]
[ext_resource type="Texture2D" uid="uid://cv75bji1k3fv8" path="res://Assets/level2/folha com 2.png" id="8_34768"]
[ext_resource type="Texture2D" uid="uid://bwpd87a5f7053" path="res://Assets/level2/bau.png" id="9_5l7gt"]
[ext_resource type="FontFile" uid="uid://b3w75txnn4iqb" path="res://Assets/Fontes/String Round.otf" id="11_7tpbn"]
[ext_resource type="Texture2D" uid="uid://2ytt1ahmy2gu" path="res://Assets/fechar email.png" id="12_kg3fk"]
[ext_resource type="Texture2D" uid="uid://j3m2atclah1u" path="res://Assets/logo.png" id="13_m3c72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iq81"]
size = Vector2(194, 278)

[node name="Level2Escada" type="Node2D"]
script = ExtResource("1_meh1w")

[node name="elevador" type="Node2D" parent="."]

[node name="Elevador" type="Sprite2D" parent="elevador"]
position = Vector2(642, 364)
texture = ExtResource("2_pfo2s")

[node name="Planta" type="Sprite2D" parent="elevador"]
position = Vector2(351, 516)
scale = Vector2(0.155078, 0.152539)
texture = ExtResource("3_g0jwb")

[node name="prancheta" type="TextureButton" parent="elevador"]
offset_left = 950.0
offset_top = 269.0
offset_right = 1032.0
offset_bottom = 366.0
texture_normal = ExtResource("4_sk5kg")
ignore_texture_size = true
stretch_mode = 0

[node name="regiaoelevador" type="Area2D" parent="elevador"]
position = Vector2(672, 389)

[node name="CollisionShape2D" type="CollisionShape2D" parent="elevador/regiaoelevador"]
position = Vector2(-8, -5)
shape = SubResource("RectangleShape2D_4iq81")

[node name="portas" type="Area2D" parent="elevador"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="elevador/portas"]
polygon = PackedVector2Array(1086, 209, 1167, 175, 1175, 450, 1110, 460, 1110, 580, 1090, 591)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="elevador/portas"]
polygon = PackedVector2Array(159, 185, 242, 218, 253, 601, 215, 647, 212, 455, 155, 448)

[node name="Setadireita" type="TextureButton" parent="elevador"]
offset_left = 1152.0
offset_top = 608.0
offset_right = 1275.0
offset_bottom = 729.0
texture_normal = ExtResource("5_jv0xp")
ignore_texture_size = true
stretch_mode = 0

[node name="porta escada" type="Node2D" parent="."]
visible = false

[node name="PortaEscada" type="Sprite2D" parent="porta escada"]
position = Vector2(642, 364)
texture = ExtResource("6_7al28")

[node name="FolhaCom3" type="Sprite2D" parent="porta escada"]
position = Vector2(399, 530)
scale = Vector2(0.217969, 0.226172)
texture = ExtResource("7_m1d11")

[node name="FolhaCom2" type="Sprite2D" parent="porta escada"]
position = Vector2(967, 496)
scale = Vector2(0.247656, 0.252734)
texture = ExtResource("8_34768")

[node name="Bau" type="Sprite2D" parent="porta escada"]
position = Vector2(1118, 637)
scale = Vector2(0.495098, 0.409366)
texture = ExtResource("9_5l7gt")

[node name="setaesquerda" type="TextureButton" parent="porta escada"]
offset_left = 11.0
offset_top = 611.0
offset_right = 156.0
offset_bottom = 726.0
texture_normal = ExtResource("5_jv0xp")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="Area2D" type="Area2D" parent="porta escada"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="porta escada/Area2D"]
polygon = PackedVector2Array(1047, 588, 1028, 675, 1028, 625, 1205, 629, 1207, 682, 1105, 693, 1029, 672, 1182, 598, 1123, 577, 1066, 575)

[node name="aviso" type="Node2D" parent="."]
visible = false

[node name="PranchetaDeAviso" type="Sprite2D" parent="aviso"]
position = Vector2(662, 341)
scale = Vector2(0.561914, 0.513477)
texture = ExtResource("4_sk5kg")

[node name="Label" type="Label" parent="aviso"]
offset_left = 479.0
offset_top = 201.0
offset_right = 840.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_7tpbn")
theme_override_font_sizes/font_size = 50
text = "Lembrete: Cuide bem
 das plantas!

ps: NeuroCorp"

[node name="voltar elevador" type="TextureButton" parent="aviso"]
offset_left = 800.0
offset_top = 111.0
offset_right = 877.0
offset_bottom = 183.0
texture_normal = ExtResource("12_kg3fk")
ignore_texture_size = true
stretch_mode = 0

[node name="Logo" type="Sprite2D" parent="aviso"]
position = Vector2(806, 406)
scale = Vector2(0.134078, 0.165771)
texture = ExtResource("13_m3c72")

[connection signal="button_up" from="elevador/prancheta" to="." method="_on_prancheta_button_up"]
[connection signal="button_up" from="elevador/Setadireita" to="." method="_on_setadireita_button_up"]
[connection signal="button_up" from="porta escada/setaesquerda" to="." method="_on_setaesquerda_button_up"]
[connection signal="button_up" from="aviso/voltar elevador" to="." method="_on_voltar_elevador_button_up"]
